@@ -4,7 +4,9 @@ Added ACB/ABC/BAC/Custom Stereo emulation
 Improved menu windows: now can have more lines than 22, doing scroll
 Added joystick action to change emulated joystick type: Sinclair, Kempston, etc
 Added support to show some unicode (utf8) characters on menu
-Improved menu: now all ascii symbols can be written
+Improved menu: 
+* now you can write any ascii character on the menu
+* now you can use binary numbers on expressions
 
 Some other minor bugfixes and improvements
 
